updates to giftcard.package and heroanimation helper method added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,6 @@
 
     <string name="action_share">Share</string>
     <string name="action_reply">Reply</string>
+    <string name="title_activity_giftcard_view">GiftcardViewActivity</string>
+    <string name="hero_gridview_item">hero_for_grid_items</string>
 </resources>
