--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,13 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cardholder_name">Navn på kortet</string>
+    <string name="terms_conditions_body">Åge Hareide viste under tirsdagens træning lidt af det, som man nok kan forvente sig i den kommende tid. Forhåbentlig får vi endnu mere at vide i dag på pressemødet, men under alle omstændigheder, så vil landstræneren givetvis give nogle svar med den opstilling, som han sender i kamp mod Island torsdag aften.</string>
+    <string name="accept">Acceptér</string>
+    <string name="decline">Afvis</string>
+    <string name="terms_conditions_title">Handelsbetingelser</string>
+    <string name="add_later">Senerer</string>
+    <string name="add_account">Tilføj konto</string>
+    <string name="account_info_title">Konto oplysninger</string>
+    <string name="update_user">Opdater bruger</string>
 </resources>
