facebook login added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="kr">kr.</string>
     <string name="action_settings">Settings</string>
     <string name="logged_in_as">Logget ind som:</string>
-    <string name="facebook_app_id">Hello blank fragment</string>
+    <string name="facebook_app_id">109193266146302</string>
     <string name="user_name_create_user">Opret en bruger</string>
     <string name="create_user">Opret bruger</string>
     <string name="password_repeated">Password gentaget</string>
