--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="update_user">Opdater bruger</string>
     <string name="msg_password_mismatch">Dine passwords matcher ikke</string>
     <string name="msg_all_fields_be_filled">Alle felter skal udfyldes</string>
+    <string name="msg_facebook_error">Noget gik galt</string>
 </resources>
