--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,6 @@
     <string name="purchased_giftcard">Købte gavekort</string>
     <string name="my_giftcard">Mine gavekort</string>
     <string name="settings">Indstillinger</string>
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
@@ -55,5 +54,10 @@
     <string name="add_account">Tilføj konto</string>
     <string name="account_info_title">Konto oplysninger</string>
     <string name="update_user">Opdater bruger</string>
+    <string name="msg_mobilepay_needs_update">Mobilepay skal opdateres inden købet</string>
+    <string name="msg_mobilepay_max_amount_reached">Du har nået din maximum købesum i denne måned</string>
+    <string name="msg_transaction_timeout">din transaktion varet mere end 5 min, prøv igen</string>
+    <string name="msg_try_again">Noget gik galt, prøv venligst igen</string>
+    <string name="msg_create_user_error">Noget gik galt med at oprette bruger</string>
 
 </resources>
