--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,5 +60,6 @@
     <string name="msg_try_again">Noget gik galt, prøv venligst igen</string>
     <string name="msg_create_user_error">Noget gik galt med at oprette bruger</string>
     <string name="purchase_giftcard">Køb Gavekort</string>
+    <string name="pay">"Betal "</string>
 
 </resources>
