--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="expiry_date">"Udløbsdato: "</string>
     <string name="you_have_bought">Du har købt et </string>
     <string name="with_value"> gavekort til</string>
+    <string name="sign_in">Log ind</string>
 </resources>
