--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="action_settings">Settings</string>
     <string name="logged_in_as">Logget ind som:</string>
     <string name="facebook_app_id">109193266146302</string>
-    <string name="user_name_create_user">Opret en bruger</string>
+    <string name="sign_in_text">Log in</string>
     <string name="create_user">Opret bruger</string>
     <string name="password_repeated">Password gentaget</string>
     <string name="password">Password</string>
@@ -72,4 +72,5 @@
     <string name="you_have_bought">Du har købt et </string>
     <string name="with_value"> gavekort til</string>
     <string name="sign_in">Log ind</string>
+    <string name="signin_as_text">Log ind som:</string>
 </resources>
