--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,5 @@
     <string name="with_value"> gavekort til</string>
     <string name="sign_in">Log ind</string>
     <string name="signin_as_text">Log ind som:</string>
+    <string name="generel_error_msg">Hov, noget gik galt, beklager.</string>
 </resources>
