--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="sign_in">Log ind</string>
     <string name="signin_as_text">Log ind som:</string>
     <string name="generel_error_msg">Hov, noget gik galt, beklager.</string>
+    <string name="signin_error_msg">Du kunne ikke logges ind, er dine oplysninger rigtige?</string>
 </resources>
