--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,5 @@
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="msg_error_barcode_creation">Beklager, en fejl opstod mens vi produceret oprettet stregkoden.</string>
+    <string name="comment">Kommentar</string>
 </resources>
