--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="user_update_error_msg">Noget gik galt med opdateringen af din profil</string>
     <string name="not_valid_email">ikke en gyldig email</string>
     <string name="take_gc_picture">Tag billede af gavekortet</string>
+    <string name="take_picture_text">Tag billede</string>
 </resources>
