--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="not_valid_email">ikke en gyldig email</string>
     <string name="take_gc_picture">Tag billede af gavekortet</string>
     <string name="take_picture_text">Tag billede</string>
+    <string name="msg_error_create_gc">Ups, noget gik galt</string>
 </resources>
