gui updates to drawer fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,5 +94,7 @@
     <string name="take_gc_picture">Tag billede af gavekortet</string>
     <string name="take_picture_text">Tag billede</string>
     <string name="msg_error_create_gc">Ups, noget gik galt</string>
-    <string name="gc_details_ttile">Gavekortsoversigt</string>
+    <string name="gc_details_tile">Gavekortsoversigt</string>
+    <string name="create_or_signin_text">Log ind eller opret bruger</string>
+
 </resources>
